--- a/src/app/files/files.component.html
+++ b/src/app/files/files.component.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+
 <p>
 View Licences here 
 </p>
@@ -10,7 +13,19 @@ View Licences here
   <option value="Licence 3 ">Licence 3</option>
   <option value="Licence 4">Licence 4</option>
 </select>
+<button class="licenceselector" onclick="letsdothis()">Find Licence</button>
+<p id="carsthemovie"></p>
+<script>
+ function letsdothis() {
+  var x = document.getElementById("cars").length;
+  document.getElementById("carsthemovie").innerHTML = x;
 
+  display(x)
+
+document.getElementById(placeholder1.jpg)
+
+}
+</script>
 
 
 
