--- a/src/app/files/files.component.html
+++ b/src/app/files/files.component.html
@@ -2,7 +2,7 @@
 <html>
 
 <p>
-View Licences here 
+Edit Licences here 
 </p>
 
 <label for="cars">Choose a Licence: </label>
@@ -13,14 +13,14 @@ View Licences here
   <option value="Licence 3 ">Licence 3</option>
   <option value="Licence 4">Licence 4</option>
 </select>
-<button class="licenceselector" onclick="letsdothis()">Find Licence</button>
+<button class="licenceselector" onclick="letsdothis()">Edit Licence</button>
 <p id="carsthemovie"></p>
 <script>
  function letsdothis() {
   var x = document.getElementById("cars").length;
   document.getElementById("carsthemovie").innerHTML = x;
 
-  display(x)
+  display(placeholder.jpg)
 
 document.getElementById(placeholder1.jpg)
 
