--- a/src/app/vehiclelist/vehiclelist.component.html
+++ b/src/app/vehiclelist/vehiclelist.component.html
@@ -1,5 +1,5 @@
 <p>
-Edit Vehicles
+View who can drive here
 </p>
 
 <label for="cars">Choose a Vehicle: </label>
@@ -10,5 +10,4 @@ Edit Vehicles
   <option value="Licence 3 ">Vehicle 3</option>
   <option value="Licence 4">Vehicle 4</option>
 </select>
-<button class="licenceselector" onclick="letsdothis()">Edit Vehicle</button>
 <p id="carsthemovie"></p>
