--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,19 +8,29 @@
 					Home
 				</mat-list-item>
 
+        <mat-list-item routerLink="/vehiclelist" (click)="close()" >
+					<mat-icon matListIcon>list</mat-icon>
+					Vehicle list 
+				</mat-list-item>
+
          <mat-list-item routerLink="/add" (click)="close()" >
 					<mat-icon matListIcon>add</mat-icon>
 					Add Licence
 				</mat-list-item>
   
 				<mat-list-item routerLink="/files" (click)="close()" >
-					<mat-icon matListIcon>'id-card'</mat-icon>
-					Licences
+					<mat-icon matListIcon>settings</mat-icon>
+					Edit Licences
+				</mat-list-item>
+
+        <mat-list-item routerLink="/vehicle" (click)="close()" >
+					<mat-icon matListIcon>add</mat-icon>
+					Add Vehicles
 				</mat-list-item>
 
 				<mat-list-item routerLink="/settings" (click)="close()" >
 					<mat-icon matListIcon>settings</mat-icon>
-					Settings
+					Edit Vehicle
 				</mat-list-item>
 
 				<mat-list-item (click)="snav.close()">
