--- a/src/app/vehicle/vehicle.component.html
+++ b/src/app/vehicle/vehicle.component.html
@@ -7,27 +7,27 @@ Add Vehicles
 <p>
   <mat-form-field appearance="legacy">
     <mat-label>Model</mat-label>
-    <input matInput placeholder="Placeholder">
+    <input matInput placeholder="">
     <mat-hint>Toyota, Mazda etc.</mat-hint>
   </mat-form-field>
 </p>
 <p>
   <mat-form-field appearance="standard">
     <mat-label>Make</mat-label>
-    <input matInput placeholder="Placeholder">
+    <input matInput placeholder="">
        <mat-hint>Hilux, Ranger etc. </mat-hint>
   </mat-form-field>
 </p>
 <p>
   <mat-form-field appearance="standard">
     <mat-label>Year</mat-label>
-    <input matInput placeholder="Placeholder">
+    <input matInput placeholder="">
   </mat-form-field>
 </p>
 <p>
   <mat-form-field appearance="standard">
     <mat-label>Body</mat-label>
-    <input matInput placeholder="Placeholder">
+    <input matInput placeholder="">
   <mat-hint>Sedan, coupe etc. </mat-hint>
   </mat-form-field>
 </p>
