--- a/src/app/add-licence/add-licence.component.html
+++ b/src/app/add-licence/add-licence.component.html
@@ -2,30 +2,38 @@
 You will be able to store the details of your licence here.
 </p>
 
-<button mat-raised-button color="primary">+ Add licence</button>
+<button mat-raised-button color="primary">+ Add licence </button>
 
 <p>
   <mat-form-field appearance="legacy">
     <mat-label>First Name</mat-label>
-    <input matInput placeholder="Placeholder">
+    <input matInput placeholder="">
   </mat-form-field>
 </p>
 <p>
   <mat-form-field appearance="standard">
     <mat-label>Last Name</mat-label>
-    <input matInput placeholder="Placeholder">
+    <input matInput placeholder="">
   </mat-form-field>
 </p>
+
+<mat-form-field appearance="fill">
+  <mat-label>Choose a date</mat-label>
+  <input matInput [matDatepicker]="picker">
+  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+  <mat-datepicker #picker></mat-datepicker>
+</mat-form-field>
+
 <p>
   <mat-form-field appearance="fill">
     <mat-label>Phone No.</mat-label>
-    <input matInput placeholder="Placeholder">
+    <input matInput placeholder="">
   </mat-form-field>
 </p>
 <p>
   <mat-form-field appearance="outline">
     <mat-label>Licence Class</mat-label>
-    <input matInput placeholder="Placeholder">
+    <input matInput placeholder="">
   </mat-form-field>
 </p>
 
